fix(building): 修复建筑项目保存失败时的状态显示和名称编辑问题
- 添加 buildingNameEditingId 字段用于跟踪正在编辑的建筑名称
- 修复建筑名称输入框在切换建筑时不会更新的问题
- 在项目加载时重置建筑名称编辑ID以避免状态残留
- 添加项目保存失败时的状态提示信息
- 修复 BuildingProject 中不可变映射的创建方式
- 为项目保存失败情况添加国际化错误消息